2014-05-17  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/json.nanorc: New file, originally from Aapo Rantalainen,
	but edited, extended, and improved.  See Savannah patch #7410.

2014-05-16  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c, src/winio.c: Remove some more double spaces.
	* doc/syntax/patch.nanorc: Show trailing whitespace on added lines.
	* doc/syntax/debian.nanorc: Make the component colouring simpler,
	and the URI colouring completer, and improve the comments.
	* doc/syntax/*.nanorc: Harmonize (partially) the syntax files.

2014-05-16  David Lawrence Ramsey  <pooka109@gmail.com>
	* src/color.c, src/cut.c, src/text.c: Tweak some whitespace.
	* src/global.c, src/move.c: Use TRUE and FALSE instead of 1 and 0.
	* src/winio.c (edit_draw): Mention the name of the tickling character.
	* src/search.c (goto_line_posx): Remove unneeded call of edit_refresh.
	* src/text.c (do_undo, do_redo): Use size_t for line lengths.

2014-05-15  Mark Majeres  <mark@engine12.com>
	* src/*, but mainly src/text.c (undo_cut, redo_cut, do_undo, do_redo):
	Go to the correct positions for undoing/redoing the cuts and pastes.
	This fixes several undo problems and Savannah bug #25585.

2014-05-15  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/c.nanorc: Improve the magic regex, plus tweaks.
	* src/color.c (color_update): Adjust a comment, and be clearer.
	* src/nano.h: Improve two comments, and elide one macro.
	* doc/syntax/Makefile.am: Add texinfo.nanorc to the packing list.

2014-05-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): Poke a non-breaking space into the last
	column of every line, to startle the terminal into handling wide,
	two-column characters properly.  This fixes Savannah bug #31743.
	* src/nano.c (precalc_multicolorinfo): Improve debugging messages,
	and remove superfluous assignment (fileptr already equals endptr).
	* src/color.c (color_update): Move magic check to after headerline.